Remove bugs, add features, complete game.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <button id="button">Click to edit drawing pane </button>
   <div id="modal" class="modal">
     <span class="close">&times;</span>
-      <form class="modal-content">
+      <div class="modal-content">
         <div class="form-container">
           <label>Choose up to 100² tiles.</label>
-          <input type="text" name="tiles" id="input-tiles">
+          <input type="text" name="tiles" id="input-tiles" value="16">
         </div>
-        <button type="submit" id="submit">submit</button>
-      </form>
+        <span id="submit">submit</span>
+      </div>
   </div>
   <div id="container">
 
